--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    this is the initial website
+    this is the initial website "here i fixed a bug"
   </body>
 </html>
