--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Document</title>
   </head>
   <body>
-    this is the initial website "here i fixed a bug"
+    <h1>title</h1>
+    <h2>subtitle</h2>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione magnam,
+      accusamus fugiat aspernatur suscipit sapiente maxime, tempore
+      reprehenderit, sit illum voluptatibus deserunt molestias. Voluptatum,
+      distinctio libero? Quam eligendi consequatur id?
+    </p>
   </body>
 </html>
