--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
   </head>
   <body>
-    this is the initial website "here i fixed a bug"
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe inventore
+    accusamus nostrum molestias nobis non ipsam ratione. Eligendi velit natus
+    possimus magni quos illum. Ab exercitationem tempora fugiat? Minus, fugit.
   </body>
 </html>
