--- a/index.html
+++ b/index.html
@@ -19,5 +19,7 @@
       asperiores nulla iste atque? Excepturi voluptatibus suscipit itaque fuga
       explicabo, aliquam laudantium ad tempore, illum minima, quis dicta?
     </p>
+    <h2>button</h2>
+    <a href="Page2.html"></a>
   </body>
 </html>
