--- a/Page2.html
+++ b/Page2.html
@@ -6,6 +6,11 @@
     <title>Document</title>
   </head>
   <body>
-    nothing here
+    <h1>title of page 2</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, unde nemo?
+      Dicta ipsa, natus odit a, quis eligendi minus asperiores omnis deserunt
+      mollitia nesciunt error assumenda officiis! Non, quas laboriosam.
+    </p>
   </body>
 </html>
