--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
       explicabo, aliquam laudantium ad tempore, illum minima, quis dicta?
     </p>
     <h2>button</h2>
-    <a href="Page2.html"></a>
+    <a href="Page2.html">button to page2</a>
   </body>
 </html>
