Update index - 2.html

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione magnam,
       accusamus fugiat aspernatur suscipit sapiente maxime, tempore
       reprehenderit, sit illum voluptatibus deserunt molestias. Voluptatum,
+      lorem
     </p>
     <h2>button</h2>
     <a href="Page2.html">button to page2</a>
